--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Dhhyey Desai</title>
+	<title>Pankti Desai</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -24,7 +24,7 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">DHHYEY</a>
+					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PANKTI</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -53,11 +53,11 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am Dhhyey Desai</h1>
-							<h5 class="text-uppercase">programmer</h5>
+							<h1 class="text-uppercase">I am Pankti Desai</h1>
+							<h5 class="text-uppercase">DevOps Engineer</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="https://github.com/dhhyey-desai"><span>GitHub</span></a>
-								<a class="primary_btn" href="https://gitlab.com/dhhyey-desai"><span>GitLab</span></a>
+								<a class="primary_btn" href="https://github.com/pmd1crt"><span>GitHub</span></a>
+								<a class="primary_btn" href="https://gitlab.com/pmd1crt"><span>GitLab</span></a>
 							</div>
 						</div>
 					</div>
@@ -89,9 +89,8 @@
 							myself</h2>
 						<p>
 
-							My hobbies are playing cricket, chess and programming in many different languages.
-							While programming I like to make games and new websites. In addition to this, I also
-							like to contribute to Open Source especially this organisation called <a href="https://aossie.gitlab.io/">AOSSIE</a>
+							My hobbies are reading books, cooking and listening to music.
+							I also like to keep myself updated around ethical hacking and forensics. 
 						</p>
 					</div>
 				</div>
@@ -204,25 +203,25 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
-						<h4>Game developing</h4>
+						<h4>Ethical Hacking</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
-						<h4>UI/UX design</h4>
+						<h4>Digital Forensics</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
-						<h4>Web design</h4>
+						<h4>Data Centre designs</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
-						<h4>artificial intelligence</h4>
+						<h4>DevOps</h4>
 					</div>
 				</div>
 			</div>
@@ -232,7 +231,7 @@
 		<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Dhhyey
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Pankti
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
