--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">DHHYEY</a>
+					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PANKTI</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -87,7 +87,7 @@
      <footer>
             <div class="row footer_bottom justify-content-center">
                 <p class="col-lg-8 col-sm-12 footer-text">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Dhhyey
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Pankti
 </p>
             </div>
         </div>
