--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">DHHYEY</a>
+					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PANKTI</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -76,23 +76,23 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
 
-<a href="https://www.testdome.com/cert/d9ce5daf6b76412cbb818922284b0c60" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Dhhyey Desai</span><span class="testdome-certificate-test-name">Android  </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>                    </div>
+<a href="https://www.testdome.com/cert/d9ce5daf6b76412cbb818922284b0c60" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Pankti Desai</span><span class="testdome-certificate-test-name">Android  </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>                    </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
 
-<a href="https://www.testdome.com/cert/046d6bc2e9324f53bbbf1cfe1827e9e3" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Dhhyey Desai</span><span class="testdome-certificate-test-name">Python </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
+<a href="https://www.testdome.com/cert/046d6bc2e9324f53bbbf1cfe1827e9e3" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Pankti Desai</span><span class="testdome-certificate-test-name">Python </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
 
-<a href="https://www.testdome.com/cert/2a9ef7e616b646049562f5e9cf3a198b" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Dhhyey Desai</span><span class="testdome-certificate-test-name">HTML/CSS and Bootstrap </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
+<a href="https://www.testdome.com/cert/2a9ef7e616b646049562f5e9cf3a198b" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Pankti Desai</span><span class="testdome-certificate-test-name">HTML/CSS and Bootstrap </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
-<a href="https://www.testdome.com/cert/80b7e76e2c6846839705e45bed631541" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Dhhyey Desai</span><span class="testdome-certificate-test-name">HTML/CSS and JavaScript </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
+<a href="https://www.testdome.com/cert/80b7e76e2c6846839705e45bed631541" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Pankti Desai</span><span class="testdome-certificate-test-name">HTML/CSS and JavaScript </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
             <div class="row footer_bottom justify-content-center">
                 <p class="col-lg-8 col-sm-12 footer-text">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Dhhyey
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Pankti
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
