--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PANKTI</a>
+					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PMD1CRT/a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -54,7 +54,7 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hell0</h3>
 							<h1 class="text-uppercase">I am Pankti Desai</h1>
-							<h5 class="text-uppercase">DevOps Engineer</h5>
+							<h5 class="text-uppercase">DevOps Engineer - University of Bolton</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="https://github.com/pmd1crt"><span>GitHub</span></a>
 								<a class="primary_btn" href="https://gitlab.com/pmd1crt"><span>GitLab</span></a>
