--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PMD1CRT/a>
+					<a style="color: #000000; text-transform: capitalize; font-weight: bold" class="navbar-brand logo_h" href="index.html">PMD1CRT</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
